More replacement of DMOJ with VNOJ

--- a/sample_files/celery.conf
+++ b/sample_files/celery.conf
@@ -1,5 +1,5 @@
 [program:celery]
-command=<path to virtualenv>/bin/celery -A dmoj_celery worker
+command=<path to virtualenv>/bin/celery -A vnoj_celery worker
 directory=<path to site>
 # You should create a dedicated user for celery to run under.
 user=<user to run under>
