Update sample configurations

--- a/sample_files/nginx.conf
+++ b/sample_files/nginx.conf
@@ -43,6 +43,18 @@ server {
         #alias <STATIC_ROOT>;
     }
 
+    location /martor {
+        root <django setting MEDIA_ROOT>;
+    }
+
+    location /pdf {
+        root <django setting MEDIA_ROOT>;
+    }
+
+    location /submission_file {
+        root <django setting MEDIA_ROOT>;
+    }
+
     # Uncomment if you are using PDFs and want to serve it faster.
     # This location name should be set to DMOJ_PDF_PROBLEM_INTERNAL.
     #location /pdfcache {
